enable detection of series 8 data

--- a/covidentify-ios/Base.lproj/Main.storyboard
+++ b/covidentify-ios/Base.lproj/Main.storyboard
@@ -583,7 +583,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="arT-Cv-g74"/>
+        <segue reference="mVL-wq-qZP"/>
         <segue reference="Luy-cf-gMt"/>
         <segue reference="mDO-nt-wx2"/>
     </inferredMetricsTieBreakers>
